test/corpus/commands.txt
================================================================================
Bare commands (BREAK, QUIT)
================================================================================

 BREAK
 QUIT

--------------------------------------------------------------------------------

(source_file
  (line
    (command_sequence
      (command
        (command_keyword))))
  (line
    (command_sequence
      (command
        (command_keyword)))))

================================================================================
SET with simple assignment
================================================================================

 S X=1

--------------------------------------------------------------------------------

(source_file
  (line
    (command_sequence
      (command
        (command_keyword)
        (argument_list
          (argument
            (binary_expression
              (variable
                (local_variable
                  (identifier)))
              (operator)
              (number))))))))

================================================================================
DO with global routine reference
================================================================================

 D ^FOO

--------------------------------------------------------------------------------

(source_file
  (line
    (command_sequence
      (command
        (command_keyword)
        (argument_list
          (argument
            (variable
              (global_variable
                (identifier)))))))))

================================================================================
Multiple commands separated by single space
================================================================================

 S X=1 S Y=2

--------------------------------------------------------------------------------

(source_file
  (line
    (command_sequence
      (command
        (command_keyword)
        (argument_list
          (argument
            (binary_expression
              (variable
                (local_variable
                  (identifier)))
              (operator)
              (number)))))
      (command
        (command_keyword)
        (argument_list
          (argument
            (binary_expression
              (variable
                (local_variable
                  (identifier)))
              (operator)
              (number))))))))

================================================================================
Command keyword full forms (canonical and abbreviated coexist)
================================================================================

 BREAK
 BREA
 BRE
 BR
 B

--------------------------------------------------------------------------------

(source_file
  (line (command_sequence (command (command_keyword))))
  (line (command_sequence (command (command_keyword))))
  (line (command_sequence (command (command_keyword))))
  (line (command_sequence (command (command_keyword))))
  (line (command_sequence (command (command_keyword)))))

================================================================================
Trailing comment on a command line
================================================================================

 S X=1 ;set x

--------------------------------------------------------------------------------

(source_file
  (line
    (command_sequence
      (command
        (command_keyword)
        (argument_list
          (argument
            (binary_expression
              (variable
                (local_variable
                  (identifier)))
              (operator)
              (number))))))
    (comment)))

================================================================================
Argless command followed by another command (two-space rule)
================================================================================

 Q  D ^FOO

--------------------------------------------------------------------------------

(source_file
  (line
    (command_sequence
      (command
        (command_keyword))
      (command
        (command_keyword)
        (argument_list
          (argument
            (variable
              (global_variable
                (identifier)))))))))

================================================================================
Argless command followed by trailing comment (two-space rule)
================================================================================

 Q  ;quit then comment

--------------------------------------------------------------------------------

(source_file
  (line
    (command_sequence
      (command
        (command_keyword)))
    (comment)))

================================================================================
FOR with body command on same line (single-space after FOR args)
================================================================================

 F I=1:1:10 W I

--------------------------------------------------------------------------------

(source_file
  (line
    (command_sequence
      (command
        (command_keyword)
        (argument_list
          (argument
            (binary_expression
              (variable
                (local_variable
                  (identifier)))
              (operator)
              (number))
            (argument_postconditional
              (number)
              (number)))))
      (command
        (command_keyword)
        (argument_list
          (argument
            (variable
              (local_variable
                (identifier)))))))))

================================================================================
Mixed: command-with-args, then argless, then command-with-args
================================================================================

 S X=1 Q  S Y=2

--------------------------------------------------------------------------------

(source_file
  (line
    (command_sequence
      (command
        (command_keyword)
        (argument_list
          (argument
            (binary_expression
              (variable
                (local_variable
                  (identifier)))
              (operator)
              (number)))))
      (command
        (command_keyword))
      (command
        (command_keyword)
        (argument_list
          (argument
            (binary_expression
              (variable
                (local_variable
                  (identifier)))
              (operator)
              (number))))))))
