test/corpus/entry_references.txt
================================================================================
DO with entry reference (LABEL^ROUTINE)
================================================================================

 D EN^A1BFMSG1

--------------------------------------------------------------------------------

(source_file
  (line
    (command_sequence
      (command
        (command_keyword)
        (argument_list
          (argument
            (entry_reference
              (identifier)
              (identifier))))))))

================================================================================
GOTO with entry reference and subscripts
================================================================================

 G LABEL^ROUTINE(1)

--------------------------------------------------------------------------------

(source_file
  (line
    (command_sequence
      (command
        (command_keyword)
        (argument_list
          (argument
            (entry_reference
              (identifier)
              (identifier)
              (subscripts
                (number)))))))))

================================================================================
Trailing whitespace before EOL is ignored
================================================================================

 Q

--------------------------------------------------------------------------------

(source_file
  (line
    (command_sequence
      (command
        (command_keyword)))))

================================================================================
DO with numeric line-number label
================================================================================

 D 2^FBAAUTL1

--------------------------------------------------------------------------------

(source_file
  (line
    (command_sequence
      (command
        (command_keyword)
        (argument_list
          (argument
            (entry_reference
              (number)
              (identifier))))))))

================================================================================
DO with indirection-as-label entry reference
================================================================================

 D @LINETAG^SCDXMSG1

--------------------------------------------------------------------------------

(source_file
  (line
    (command_sequence
      (command
        (command_keyword)
        (argument_list
          (argument
            (entry_reference
              (indirection
                (variable
                  (local_variable
                    (identifier))))
              (identifier))))))))

================================================================================
Extrinsic function with no label ($$^ROUTINE)
================================================================================

 S X=$$^FOO

--------------------------------------------------------------------------------

(source_file
  (line
    (command_sequence
      (command
        (command_keyword)
        (argument_list
          (argument
            (binary_expression
              (variable
                (local_variable
                  (identifier)))
              (operator)
              (extrinsic_function
                (identifier)))))))))

================================================================================
Extrinsic function with indirection on routine ($$@routine)
================================================================================

 S X=$$@STAG

--------------------------------------------------------------------------------

(source_file
  (line
    (command_sequence
      (command
        (command_keyword)
        (argument_list
          (argument
            (binary_expression
              (variable
                (local_variable
                  (identifier)))
              (operator)
              (extrinsic_function
                (indirection
                  (variable
                    (local_variable
                      (identifier))))))))))))

================================================================================
DO with numeric local-label call (no ^routine)
================================================================================

 D 12(X,Y)

--------------------------------------------------------------------------------

(source_file
  (line
    (command_sequence
      (command
        (command_keyword)
        (argument_list
          (argument
            (numeric_label_call
              (number)
              (subscripts
                (variable
                  (local_variable
                    (identifier)))
                (variable
                  (local_variable
                    (identifier)))))))))))

================================================================================
Extrinsic with numeric label
================================================================================

 S X=$$509(N)

--------------------------------------------------------------------------------

(source_file
  (line
    (command_sequence
      (command
        (command_keyword)
        (argument_list
          (argument
            (binary_expression
              (variable
                (local_variable
                  (identifier)))
              (operator)
              (extrinsic_function
                (number)
                (variable
                  (local_variable
                    (identifier)))))))))))

================================================================================
System global ^$JOB
================================================================================

 I '$D(^$JOB(X))

--------------------------------------------------------------------------------

(source_file
  (line
    (command_sequence
      (command
        (command_keyword)
        (argument_list
          (argument
            (unary_expression
              (operator)
              (function_call
                (intrinsic_function_keyword)
                (variable
                  (global_variable
                    (identifier)
                    (subscripts
                      (variable
                        (local_variable
                          (identifier))))))))))))))
