test/corpus/expressions.txt
================================================================================
String literal with embedded doubled quote
================================================================================

 W "he said ""hi"""

--------------------------------------------------------------------------------

(source_file
  (line
    (command_sequence
      (command
        (command_keyword)
        (argument_list
          (argument
            (string)))))))

================================================================================
Numeric literals (integer, decimal, exponent)
================================================================================

 W 42
 W 3.14
 W 1.5E10
 W .5

--------------------------------------------------------------------------------

(source_file
  (line (command_sequence (command (command_keyword) (argument_list (argument (number))))))
  (line (command_sequence (command (command_keyword) (argument_list (argument (number))))))
  (line (command_sequence (command (command_keyword) (argument_list (argument (number))))))
  (line (command_sequence (command (command_keyword) (argument_list (argument (number)))))))

================================================================================
Global variable with subscripts
================================================================================

 S ^FOO("a","b")=1

--------------------------------------------------------------------------------

(source_file
  (line
    (command_sequence
      (command
        (command_keyword)
        (argument_list
          (argument
            (binary_expression
              (variable
                (global_variable
                  (identifier)
                  (subscripts
                    (string)
                    (string))))
              (operator)
              (number))))))))

================================================================================
Local variable with subscripts
================================================================================

 S X(1,2)=10

--------------------------------------------------------------------------------

(source_file
  (line
    (command_sequence
      (command
        (command_keyword)
        (argument_list
          (argument
            (binary_expression
              (variable
                (local_variable
                  (identifier)
                  (subscripts
                    (number)
                    (number))))
              (operator)
              (number))))))))

================================================================================
Concatenation operator (underscore) — left-to-right per M spec
================================================================================

 S X="hello"_"world"

--------------------------------------------------------------------------------

(source_file
  (line
    (command_sequence
      (command
        (command_keyword)
        (argument_list
          (argument
            (binary_expression
              (binary_expression
                (variable
                  (local_variable
                    (identifier)))
                (operator)
                (string))
              (operator)
              (string))))))))

================================================================================
Parenthesized subexpression
================================================================================

 S X=(A+B)

--------------------------------------------------------------------------------

(source_file
  (line
    (command_sequence
      (command
        (command_keyword)
        (argument_list
          (argument
            (binary_expression
              (variable
                (local_variable
                  (identifier)))
              (operator)
              (parenthesized
                (binary_expression
                  (variable
                    (local_variable
                      (identifier)))
                  (operator)
                  (variable
                    (local_variable
                      (identifier))))))))))))

================================================================================
Negated comparison operators (not-equal, not-less, not-greater)
================================================================================

 I A'=B S X=1
 I A'<B S Y=2
 I A']]B S Z=3

--------------------------------------------------------------------------------

(source_file
  (line
    (command_sequence
      (command
        (command_keyword)
        (argument_list
          (argument
            (binary_expression
              (variable (local_variable (identifier)))
              (operator)
              (variable (local_variable (identifier)))))))
      (command
        (command_keyword)
        (argument_list
          (argument
            (binary_expression
              (variable (local_variable (identifier)))
              (operator)
              (number)))))))
  (line
    (command_sequence
      (command
        (command_keyword)
        (argument_list
          (argument
            (binary_expression
              (variable (local_variable (identifier)))
              (operator)
              (variable (local_variable (identifier)))))))
      (command
        (command_keyword)
        (argument_list
          (argument
            (binary_expression
              (variable (local_variable (identifier)))
              (operator)
              (number)))))))
  (line
    (command_sequence
      (command
        (command_keyword)
        (argument_list
          (argument
            (binary_expression
              (variable (local_variable (identifier)))
              (operator)
              (variable (local_variable (identifier)))))))
      (command
        (command_keyword)
        (argument_list
          (argument
            (binary_expression
              (variable (local_variable (identifier)))
              (operator)
              (number))))))))

================================================================================
SET with multi-target list (parenthesised LHS)
================================================================================

 S (X,Y,Z)=0

--------------------------------------------------------------------------------

(source_file
  (line
    (command_sequence
      (command
        (command_keyword)
        (argument_list
          (argument
            (set_target_list
              (variable (local_variable (identifier)))
              (variable (local_variable (identifier)))
              (variable (local_variable (identifier)))
              (number))))))))

================================================================================
KILL with multi-target list (no =RHS)
================================================================================

 K (A,B,C)

--------------------------------------------------------------------------------

(source_file
  (line
    (command_sequence
      (command
        (command_keyword)
        (argument_list
          (argument
            (set_target_list
              (variable (local_variable (identifier)))
              (variable (local_variable (identifier)))
              (variable (local_variable (identifier))))))))))

================================================================================
Pass-by-reference parameter (.VAR) in function call
================================================================================

 D LABEL(A,.B,C)

--------------------------------------------------------------------------------

(source_file
  (line
    (command_sequence
      (command
        (command_keyword)
        (argument_list
          (argument
            (variable
              (local_variable
                (identifier)
                (subscripts
                  (variable (local_variable (identifier)))
                  (by_reference (identifier))
                  (variable (local_variable (identifier))))))))))))

================================================================================
Pass-by-reference in extrinsic function call
================================================================================

 S X=$$F(.A,B)

--------------------------------------------------------------------------------

(source_file
  (line
    (command_sequence
      (command
        (command_keyword)
        (argument_list
          (argument
            (binary_expression
              (variable (local_variable (identifier)))
              (operator)
              (extrinsic_function
                (identifier)
                (by_reference (identifier))
                (variable (local_variable (identifier)))))))))))

================================================================================
$SELECT with colon-paired arguments
================================================================================

 S X=$S(A=1:"yes",1:"no")

--------------------------------------------------------------------------------

(source_file
  (line
    (command_sequence
      (command
        (command_keyword)
        (argument_list
          (argument
            (binary_expression
              (variable (local_variable (identifier)))
              (operator)
              (function_call
                (intrinsic_function_keyword)
                (binary_expression
                  (variable (local_variable (identifier)))
                  (operator)
                  (number))
                (string)
                (number)
                (string)))))))))

================================================================================
Naked global reference (^(...) — last-used global)
================================================================================

 S X=$P(^(0),U,3)

--------------------------------------------------------------------------------

(source_file
  (line
    (command_sequence
      (command
        (command_keyword)
        (argument_list
          (argument
            (binary_expression
              (variable (local_variable (identifier)))
              (operator)
              (function_call
                (intrinsic_function_keyword)
                (variable
                  (global_variable
                    (subscripts (number))))
                (variable (local_variable (identifier)))
                (number)))))))))

================================================================================
Function call with omitted first argument
================================================================================

 D UPDATE^DIE(,"X","Y")

--------------------------------------------------------------------------------

(source_file
  (line
    (command_sequence
      (command
        (command_keyword)
        (argument_list
          (argument
            (entry_reference
              (identifier)
              (identifier)
              (subscripts
                (string)
                (string)))))))))
